CSS issues with background and reduced spacing on square and round page stacks. Math errors in the Square model (diameter and CalcSingleX). NavBar bug if you went straight to square. Added to the form descriptions (particularly for square track).

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,9 +15,8 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+html { height: 100%; }
 .bg {
-  height: 100vh;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
